include_directories (${CMAKE_CURRENT_SOURCE_DIR})
LIST(APPEND SRC intrael.c md5.c)
IF(WIN32)
  set_source_files_properties(${SRC} PROPERTIES LANGUAGE CXX)
ENDIF(WIN32)
add_executable (intrael ${SRC})
if (WIN32)
  set(MATH_LIB "")
else(WIN32)
  set(MATH_LIB "m")
endif()
target_link_libraries(intrael ${LIBFREENECT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
IF(WIN32)
	target_link_libraries(intrael Ws2_32)
ENDIF(WIN32)

install (TARGETS intrael DESTINATION bin)
